# cde-drug-sft-pipeline

./: .dockerignore  .gitignore  Agent.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: project.yaml  train.yaml
docs/: DECISIONS.md
scripts/: README.md  build_benchmark_dataset.py  build_qa_dataset.py  cde_leaflet_helper.user.js  clean_leaflet_records.py  compare_benchmark_runs.py  download_leaflets.sh  evaluate_benchmark.py  evaluate_leaflet_fields.py  extract_leaflet_fields.py  run_benchmark_generation.py  run_benchmark_workflow.py  run_infer.py  run_llm_judge_evaluation.py  run_llm_judge_workflow.py  run_pipeline.py  split_qa_dataset.py  train_qwen_dora.py
src/cde_drug_sft_pipeline/: __init__.py
src/leaflet_pipeline/: __init__.py  benchmark_schema.py  benchmarking.py  leaflet_cleaning.py  leaflet_schema.py  pipeline_building.py  pipeline_schema.py  train_dataset.py
src/llm_judge/: __init__.py  deepseek_judge.py
